Fix for http://bugs.webkit.org/show_bug.cgi?id=17020 Function.toString does not parenthesise numbers for the bracket accessor

Reviewed by Maciej and Darin.

It turns out that logic was there for all of the dot accessor nodes to make numbers be
parenthesised properly, so it was a trivial extension to extend that to the bracket nodes.
I renamed the enum type to reflect the fact that it is now used for both dot and bracket
accessors.


Canonical link: https://commits.webkit.org/23635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29813 268f45cc-cd09-0410-ab3c-d52691b4dbfc